# modarith

./: Cargo.toml  EC256.c  EC256.rs  Ed448.c  Ed448.rs  README.md  bowe.sage  curve.h  curve.py  curve.py.bak  curve_rust.py  ec256_order.py  ec256_order.py.bak  ec384_order.py  ec384_order.py.bak  ec521_order.py  ed448.c  ed448.rs  ed448_order.py  edge.c  edge.py  edwards.c  edwards.rs  features.txt  hash.c  hash.h  hash.rs  make.py  monty.py  monty.py.bak  monty_rust.py  monty_rust.py.bak  montyms64.py  nist256.c  nist256.rs  parse.py  pseudo.py  pseudo.py.bak  pseudo_rust.py  pseudo_rust.py.bak  (+11 more)
neon/: README.md  monty_neon.py  pseudo_neon.py  rfc7748_neon.c
simd/: README.md  curve.py  ifma.h  monty_avx.py  monty_avx512.py  monty_cuda.py  monty_ifma.py  monty_neon.py  monty_simd.py  monty_sse.py  pseudo_avx.py  pseudo_avx512.py  pseudo_cuda.py  pseudo_ifma.py  pseudo_neon.py  pseudo_simd.py  pseudo_sse.py  rfc7748_simd.c  rfc7748_simt.cu  simd.h
