# Cargo.toml file for rust projects
[package]
name = "ecc"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]

name="testcurve"
path="src/testcurve.rs"

[[bin]]
name="EC256"
path="src/EC256.rs"

[[bin]]
name="Ed448"
path="src/Ed448.rs"

[features]

EDWARDS = []
WEIERSTRASS = []
ED25519 = ["EDWARDS"]
NIST256 = ["WEIERSTRASS"]
NIST384 = ["WEIERSTRASS"]
NIST521 = ["WEIERSTRASS"]
ED448 = ["EDWARDS"]
NUMS256W = ["WEIERSTRASS"]
NUMS256E = ["EDWARDS"]
SECP256K1 = ["WEIERSTRASS"]
